<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".activitys.ActivityLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/home"
            android:src="@drawable/ic_login" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/iniciar_sesion"
            android:textAlignment="center"
            android:textColor="@color/colorTexto"
            android:textStyle="bold|italic" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/email"
            android:textColorHint="@color/colorTextHint"
            app:boxStrokeColor="@color/colorPrin"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorIconosOpaco"
            app:hintTextColor="@color/colorTextoTitulos"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/colorPrin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorTexto" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/password"
            android:textColorHint="@color/colorTextHint"
            app:boxStrokeColor="@color/colorPrin"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorIconosOpaco"
            app:hintTextColor="@color/colorTextoTitulos"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/colorPrin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorTexto" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_background"
            android:onClick="MetodoIniciarSesion"
            android:padding="10dp"
            android:text="@string/entrar"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/BOcontra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:onClick="MetodoRecuperarContra"
            android:text="@string/olvidocontra"
            android:textAllCaps="false"
            android:textColor="@color/colorPrin" />
    </LinearLayout>
</ScrollView>