<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentConfiguraciones">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/cardUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorCardView"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/mi_cuenta"
                        android:textAllCaps="true"
                        android:textColor="@color/colorBlue"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/colorPrin" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/colorPrin" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                android:textAlignment="center"
                                android:textColor="@color/colorTextoTitulos"
                                android:textSize="16sp"
                                android:textStyle="bold|italic" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:text="@string/dos_puntos"
                                android:textAlignment="center"
                                android:textColor="@color/colorTextoTitulos"
                                android:textSize="16sp"
                                android:textStyle="bold|italic" />

                            <TextView
                                android:id="@+id/Bemail"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:lines="1"
                                android:textAlignment="textStart"
                                android:textColor="@color/colorTexto"
                                android:textSize="16sp"
                                android:textStyle="italic" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/colorPrin" />

                        <Button
                            android:id="@+id/Bcerrar_sesion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/button_background_red"
                            android:padding="3dp"
                            android:text="@string/cerrar_sesion"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textColor="@color/colorWhite"
                            android:textStyle="italic" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cardLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorCardView"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:contentPadding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/iniciar_sesion"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/colorBlue"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inicia_sesi_n_para_subir_nuevas_palabras"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorTexto"
                        android:textStyle="bold|italic" />

                    <Button
                        android:id="@+id/Blogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/button_background"
                        android:padding="3dp"
                        android:text="@string/iniciar_sesion"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textStyle="italic" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/colorCardView"
            app:cardCornerRadius="10dp"
            app:cardElevation="25dp"
            app:contentPadding="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:lines="1"
                    android:text="Tema"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlue"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <Switch
                    android:id="@+id/switchTema"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_contornos_switch"
                    android:padding="5dp"
                    android:text="Modo Oscuro"
                    android:textColor="@color/colorTexto"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="50dp"
            app:cardBackgroundColor="@color/colorCardView"
            app:cardCornerRadius="10dp"
            app:cardElevation="25dp"
            app:contentPadding="0dp"
            app:contentPaddingBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:lines="1"
                    android:text="@string/acerca_de"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlue"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/colorTexto"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/estudiante"
                    android:textAlignment="center"
                    android:textColor="@color/colorTexto"
                    android:textSize="14sp"
                    android:textStyle="normal" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>