<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentMain">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/nav_host_fragment1"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:defaultNavHost="true" />
        </LinearLayout>

        <com.gauravk.bubblenavigation.BubbleNavigationLinearView
            android:id="@+id/navigationBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_rounded"
            android:elevation="5dp"
            android:padding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/tabFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:bt_colorActive="@color/colorPrin"
                app:bt_colorInactive="@color/colorDesactivado"
                app:bt_icon="@drawable/ic_home"
                app:bt_shape="@drawable/tab_movie_color"
                app:bt_title="@string/home"
                app:bt_titlePadding="5dp"
                app:bt_titleSize="14sp" />

            <com.gauravk.bubblenavigation.BubbleToggleView
                android:id="@+id/tabFav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:bt_colorActive="@color/colorPrin"
                app:bt_colorInactive="@color/colorDesactivado"
                app:bt_icon="@drawable/ic_perfil"
                app:bt_shape="@drawable/tab_fav_color"
                app:bt_title="@string/mi_cuenta"
                app:bt_titlePadding="5dp"
                app:bt_titleSize="14sp" />

        </com.gauravk.bubblenavigation.BubbleNavigationLinearView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/todo"
        android:elevation="25dp"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/colorPrin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/colorWhite" />
</androidx.constraintlayout.widget.ConstraintLayout>