<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@android:color/transparent"
    app:cardBackgroundColor="@color/colorCardView"
    app:cardCornerRadius="0dp"
    app:cardElevation="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/actualizaci_n_disponible"
                android:textAlignment="center"
                android:textColor="@color/colorTextoTitulos"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="10dp"
                android:layout_marginBottom="50dp"
                app:cardBackgroundColor="@color/colorCardView"
                app:cardCornerRadius="5dp"
                app:cardElevation="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"

                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_update" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/nueva_actualizaci_n_disponible"
                        android:textAlignment="center"
                        android:textColor="@color/colorTexto"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="Versión: 1.7"
                        android:textAlignment="center"
                        android:textColor="@color/colorTexto"
                        android:textStyle="bold|italic" />

                    <Button
                        android:id="@+id/BIncre"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"

                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:padding="5dp"
                        android:text="@string/actualizar"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/aprovecha_para_calificar"
                        android:textAlignment="center"
                        android:textColor="@color/colorTexto"
                        android:textStyle="bold|italic" />

                    <RatingBar
                        android:id="@+id/my_rating_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:focusable="false"
                        android:numStars="5"
                        android:progressTint="@color/colorYellow"
                        android:rating="5.0"
                        android:secondaryProgressTint="@color/colorTextoTitulos"
                        android:stepSize="1.0" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="50dp"
                app:cardBackgroundColor="@color/colorCardView"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/BCancelar"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background_red"
                        android:padding="5dp"
                        android:text="@string/cancelar"
                        android:textAllCaps="false"

                        android:textColor="@color/colorWhite" />

                    <Button
                        android:id="@+id/BActualizar"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_background"
                        android:padding="5dp"
                        android:text="@string/actualizar"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>